[gd_scene load_steps=22 format=3 uid="uid://b4i6nubpt78oh"]

[ext_resource type="Script" path="res://src/Card.gd" id="1_nv58w"]
[ext_resource type="StyleBox" uid="uid://nrrp32xv522l" path="res://src/Card.tres" id="2_xvo71"]
[ext_resource type="Script" path="res://src/CardCostArea.gd" id="3_7n627"]
[ext_resource type="Texture2D" uid="uid://c2r5l4ypyweyw" path="res://assets/card-components/energy-black.png" id="4_xl06n"]
[ext_resource type="Theme" uid="uid://y7aot7vogdr6" path="res://src/Themes/ButtonTheme.tres" id="5_jhbe2"]
[ext_resource type="LabelSettings" uid="uid://di7m64aqradk6" path="res://src/Themes/CardKnoweldgeSettings.tres" id="6_7avcf"]
[ext_resource type="Texture2D" uid="uid://dwu5afbcd83mf" path="res://assets/card-components/knowledge-U.png" id="7_tao0g"]
[ext_resource type="Texture2D" uid="uid://bla5kmox0uutt" path="res://assets/card-components/knowledge-G.png" id="8_tj516"]
[ext_resource type="Texture2D" uid="uid://ubacjv4amyn1" path="res://assets/card-components/knowledge-P.png" id="9_w3fdw"]
[ext_resource type="Texture2D" uid="uid://ctiwq73fpxfx1" path="res://assets/card-components/knowledge-R.png" id="10_revk2"]
[ext_resource type="Texture2D" uid="uid://cnnp27dobkbl6" path="res://assets/card-components/knowledge-Y.png" id="11_fsl4e"]
[ext_resource type="Texture2D" uid="uid://clxwqjxri4v7i" path="res://assets/buttons/grunge-highlight-black.png" id="12_wi8bx"]
[ext_resource type="Texture2D" uid="uid://bwod62ptmw11f" path="res://assets/card-components/Unit.png" id="13_tffy6"]

[sub_resource type="Theme" id="Theme_85bxo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxa1m"]

[sub_resource type="Theme" id="Theme_6m1il"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q2wj6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ir4dl"]
content_margin_left = 0.0
content_margin_top = 3.0
content_margin_right = 0.0
content_margin_bottom = 3.0
texture = ExtResource("12_wi8bx")

[sub_resource type="LabelSettings" id="LabelSettings_k2rkx"]
font_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_layk5"]
bg_color = Color(0.843137, 0.843137, 0.843137, 0.270588)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufr28"]
content_margin_top = 3.0
content_margin_bottom = 3.0
texture = ExtResource("12_wi8bx")

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 200.0
offset_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = SubResource("Theme_85bxo")
theme_override_styles/panel = SubResource("StyleBoxEmpty_vxa1m")
script = ExtResource("1_nv58w")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 2

[node name="InternalContainer" type="PanelContainer" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_6m1il")
theme_override_styles/panel = ExtResource("2_xvo71")

[node name="CardImage" type="PanelContainer" parent="AspectRatioContainer/InternalContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_q2wj6")

[node name="Contents" type="VBoxContainer" parent="AspectRatioContainer/InternalContainer/CardImage"]
layout_mode = 2

[node name="Control2" type="Control" parent="AspectRatioContainer/InternalContainer/CardImage/Contents"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/InternalContainer/CardImage/Contents"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
mouse_filter = 1

[node name="CostArea" type="VBoxContainer" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
script = ExtResource("3_7n627")

[node name="CostBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_xl06n")
expand_mode = 5

[node name="Cost" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/CostBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme = ExtResource("5_jhbe2")
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueKnowledgeBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("7_tao0g")
expand_mode = 5

[node name="BlueKnowledgeLabel" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/BlueKnowledgeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jhbe2")
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GreenKnowledgeBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
layout_mode = 2
texture = ExtResource("8_tj516")
expand_mode = 5

[node name="GreenKnowledgeLabel" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/GreenKnowledgeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PurpleKnowledgeBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("9_w3fdw")
expand_mode = 5

[node name="PurpleKnowledgeLabel" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/PurpleKnowledgeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedKnowledgeBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("10_revk2")
expand_mode = 5

[node name="RedKnowledgeLabel" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/RedKnowledgeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="YellowKnowledgeBG" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea"]
show_behind_parent = true
layout_mode = 2
texture = ExtResource("11_fsl4e")
expand_mode = 5

[node name="YellowKnowledgeLabel" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/CostArea/YellowKnowledgeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("6_7avcf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Name" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
theme = ExtResource("5_jhbe2")
theme_override_styles/normal = SubResource("StyleBoxTexture_ir4dl")
text = "CardName"
label_settings = SubResource("LabelSettings_k2rkx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_layk5")

[node name="TypeIcon" type="TextureRect" parent="AspectRatioContainer/InternalContainer/CardImage/Contents/HBoxContainer/VBoxContainer2/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_tffy6")
expand_mode = 5

[node name="Stats" type="Label" parent="AspectRatioContainer/InternalContainer/CardImage/Contents"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("5_jhbe2")
theme_override_styles/normal = SubResource("StyleBoxTexture_ufr28")
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
